# rustdl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  deny.toml  owl-dl-reasoner-rust-strategy-v2.md  owl-dl-reasoner-rust-strategy.md  rust-toolchain.toml
crates/owl-dl-bench/: Cargo.toml
crates/owl-dl-bench/examples/: anatomy.ofn  family.ofn
crates/owl-dl-bench/fixtures/: 01_atomic_sat.ofn  02_and_not_a_unsat.ofn  03_or_backtrack_sat.ofn  04_or_all_unsat.ofn  05_exists_sat.ofn  06_exists_inner_clash_unsat.ofn  07_forall_clash_unsat.ofn  08_cyclic_blocking_sat.ofn  09_subsumption_chain_unsat.ofn  10_disjoint_clash_unsat.ofn  11_nested_exists_sat.ofn  12_mutual_cycle_blocking_sat.ofn  13_deep_disjunction_sat.ofn  14_residual_gci_unsat.ofn  15_two_roles_sat.ofn  16_forall_split_disjunction_sat.ofn  17_three_way_equivalence_sat.ofn  18_diamond_subsumption_unsat.ofn  19_concept_rule_then_clash_unsat.ofn  20_double_negation_sat.ofn  21_propositional_unsat.ofn  22_disjunction_under_exists_sat.ofn  23_three_step_cycle_blocking_sat.ofn  24_nested_propagation_sat.ofn  25_parent_childless_unsat.ofn  26_pizza_disjoint_unsat.ofn  27_eight_way_disjunction_sat.ofn  28_equivalence_chain_sat.ofn  29_disjunction_under_all_branches_clash_unsat.ofn  30_disjoint_union_member_sat.ofn  31_role_hierarchy_propagation_unsat.ofn  32_role_equivalence_propagation_unsat.ofn  33_role_hierarchy_witness_reuse_sat.ofn  34_role_hierarchy_chain_unsat.ofn  35_inverse_exists_sat.ofn  36_inverse_exists_clash_unsat.ofn  37_inverse_forall_propagation_unsat.ofn  38_inverse_cyclic_blocking_sat.ofn  39_inverse_axiom_propagation_unsat.ofn  40_inverse_axiom_witness_reuse_sat.ofn  (+49 more)
crates/owl-dl-bench/src/: main.rs
crates/owl-dl-bench/tests/: anatomy_classify.rs  family_classify.rs  fixtures_diff.rs  fixtures_parse.rs
crates/owl-dl-cli/: Cargo.toml
crates/owl-dl-cli/src/: main.rs
crates/owl-dl-core/: Cargo.toml
crates/owl-dl-core/src/: absorb.rs  clause.rs  convert.rs  convert_back.rs  data_axioms.rs  definitions.rs  disjunction_existential.rs  ir.rs  lib.rs  locality.rs  normalize.rs  ontology.rs  residual_trigger.rs  role_hierarchy.rs  told.rs  transform.rs  vocab.rs
crates/owl-dl-core/tests/: concept_pool_proptest.proptest-regressions  concept_pool_proptest.rs  convert_round_trip_proptest.rs  role_hierarchy_proptest.rs
crates/owl-dl-datatypes/: Cargo.toml
crates/owl-dl-datatypes/src/: lib.rs
crates/owl-dl-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/owl-dl-py/python/rustdl/: __init__.py  examples.py
crates/owl-dl-py/src/: classify.rs  errors.rs  lib.rs  load.rs  materialize.rs  queries.rs
crates/owl-dl-py/tests/python/: conftest.py  test_classify.py  test_examples.py  test_materialize.py  test_queries.py  test_smoke.py  test_soundness.py
crates/owl-dl-reasoner/: Cargo.toml
crates/owl-dl-reasoner/examples/: embed_classify.rs
crates/owl-dl-reasoner/src/: abox_check.rs  classify.rs  justify.rs  lib.rs  model_cache.rs  realize.rs  union_find.rs
crates/owl-dl-reasoner/tests/: abox_consistency.rs  anon349_diagnostic.rs  classify_concrete_domain.rs  concrete_domain_clash.rs  datatype_completeness.rs  datatype_inconsistency.rs  datatype_value_membership.rs  justification.rs  konclude_closure_diff.rs  label_heuristic_canary.rs  phase2c_pair_06_canary.rs  real_ontology_corpus.rs  snapshot_phase0_canary.rs
crates/owl-dl-reasoner/tests/fixtures/: functional-equiv-some-bug.ofn  named-pizza-country-bug.ofn
crates/owl-dl-reasoner/tests/fixtures/abox/: p1_direct_bot.ofn  p1_no_bot.ofn  p2_disjoint_different_individuals.ofn  p2_disjoint_types.ofn  p3_neg_opa.ofn  p3_neg_opa_no_clash.ofn  p3_role_hierarchy_neg_consistent.ofn  p3_role_hierarchy_neg_inconsistent.ofn  p4_same_different.ofn  p4_same_without_different.ofn  p5_functional_diff.ofn  p5_functional_same_target.ofn  p6_asymmetric.ofn  p6_asymmetric_one_way.ofn  p6_irreflexive.ofn  p6_irreflexive_distinct.ofn  p7_range_compatible.ofn  p7_range_disjoint.ofn
crates/owl-dl-reasoner/tests/fixtures/datatype/: data_cardinality_disjoint.ofn  data_property_domain-classified.owx  data_property_domain.ofn  datatype_definition-classified.owx  datatype_definition.ofn  datatype_facet.ofn  functional_data_property.ofn  sub_data_property-classified.owx  sub_data_property.ofn
crates/owl-dl-reasoner/tests/fixtures/phase2b/: p2b0-terms-01.txt  p2b0-terms-02.txt  p2b0-terms-03.txt  p2b0-terms-04.txt  p2b0-terms-05.txt  p2b0-terms-06.txt  p2b0-terms-07.txt  p2b0-terms-08.txt  pair_01.hermit.owx  pair_01.ofn  pair_01.owx  pair_02.hermit.owx  pair_02.ofn  pair_02.owx  pair_04.ofn  pair_04.owx  pair_05.hermit.owx  pair_06.hermit.owx  pair_06.ofn  pair_06.owx  pair_07.hermit.owx  pair_07.ofn  pair_07.owx  pair_08.hermit.owx  pair_08.ofn  pair_08.owx
crates/owl-dl-tableau/: Cargo.toml
crates/owl-dl-tableau/src/: counters.rs  deps.rs  graph.rs  hyper.rs  lib.rs  replay.rs  rules.rs  saturate.rs  search.rs  snapshot.rs  trail.rs
crates/owl-dl-tableau/tests/: backprop_risk.rs  replay_driver.rs  replay_roundtrip.rs  snapshot_capture.rs
docs/: 1uip-cdcl-kickoff-2026-06-06.md  abox-consistency-check-handoff.md  anytime-experiment-2026-06-10.md  anytime-results-2026-06-11.csv  anytime-results-2026-06-11.md  anywhere-blocking-scoping-2026-06-10.md  architecture-roadmap.md  backjump-reconcile-2026-06-06.md  c2-calibration-matrix-2026-06-08.md  cdbl-plan.md  classify-recovery-scope-2026-06-07.md  conflict-learning-design-2026-06-06.md  conflict-learning-inc1-results-2026-06-06.md  corpus-datatype-2026-06-06.md  corpus-wine-2026-06-06.md  datatype-completeness-handoff.md  embeddability-demo-2026-06-10.md  fragment-completeness.md  handoff-2026-05-30.md  handoff-2026-06-02.md  handoff-2026-06-03-snapshot-cache-project-complete.md  handoff-2026-06-03.md  handoff-2026-06-05.md  hypertableau-backjumping-scoping.md  hypertableau-cardinality-scoping.md  hypertableau-dead-ends.md  hypertableau-full-scoping.md  hypertableau-h3b-scoping.md  hypertableau-h4-scoping.md  (+95 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+72 files in other folders)
