[package]
name = "xtask"
description = "Build automation tasks for rustdl (corpus fetch, license inventory, ...)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
