[package]
name = "owl-dl-bench"
description = "Benchmark harness for rustdl against the ORE corpus, with HermiT/Konclude oracles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "owl-dl-bench"
path = "src/main.rs"

[dependencies]
owl-dl-reasoner.workspace = true
horned-owl.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
horned-owl.workspace = true
owl-dl-reasoner.workspace = true

[lints]
workspace = true
