[package]
name = "owl-dl-cli"
description = "Command-line interface for the rustdl OWL DL reasoner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rustdl"
path = "src/main.rs"

[dependencies]
owl-dl-reasoner.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
