[package]
name = "owl-dl-core"
description = "Core IR, normalization, and shared utilities for the rustdl OWL DL reasoner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
horned-owl.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
bitvec.workspace = true
bumpalo.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
