[package]
name = "owl-dl-datatypes"
description = "Datatype reasoners (xsd:boolean, xsd:integer, xsd:string, ...) for rustdl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
owl-dl-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
