[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rustdl"
description = "Sound, performant OWL 2 DL (SROIQ) reasoner in Rust — Python bindings"
readme = "README.md"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "rustdl contributors" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
keywords = ["owl", "ontology", "reasoner", "description-logic", "semantic-web"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MaastrichtU-IDS/rustdl"
Repository = "https://github.com/MaastrichtU-IDS/rustdl"
Documentation = "https://github.com/MaastrichtU-IDS/rustdl/blob/main/README.md"
Changelog = "https://github.com/MaastrichtU-IDS/rustdl/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "rustdl._native"
features = ["pyo3/extension-module"]
strip = true
