[package]
name = "owl-dl-reasoner"
description = "Hybrid saturation+tableau OWL DL reasoner — public API for rustdl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
owl-dl-core.workspace = true
owl-dl-saturation.workspace = true
owl-dl-tableau.workspace = true
owl-dl-datatypes.workspace = true
horned-owl.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
